# cpp_testing

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.cache/clangd/index/: test.cpp.159FC2EF1B6A408F.idx  test.cpp.5343552E06D5D45A.idx
src/: test.cpp
src/asReference/: CMakeLists.txt  main.cpp
src/calculator/: CMakeLists.txt  main.cpp  supplemental.cpp  supplemental.hpp
src/helloWorld/: CMakeLists.txt
src/ifAndSwitch/: CMakeLists.txt  main.cpp
src/new_calculator/: CMakeLists.txt  main.cpp  supplemental.cpp  supplemental.hpp
src/simpleError/: CMakeLists.txt  main.cpp
src/simpleVector/: CMakeLists.txt  main.cpp
src/whileForFunction/: CMakeLists.txt  main.cpp
src/whileString/: CMakeLists.txt  main.cpp
src/yourName/: CMakeLists.txt  main.cpp
